--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,18 @@ anyio==4.12.1
 click==8.3.1
 colorama==0.4.6
 fastapi==0.128.5
+gitdb==4.0.12
+GitPython==3.1.46
 h11==0.16.0
 idna==3.11
 pydantic==2.12.5
+pydantic-settings==2.12.0
 pydantic_core==2.41.5
+python-dotenv==1.2.1
+PyYAML==6.0.3
+smmap==5.0.2
 starlette==0.52.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 uvicorn==0.40.0
-PyYAML
-GitPython
-watchfiles
-python-dotenv
+watchfiles==1.1.1
