認証情報をURLに明示的に登録するように変更

--- a/.env_template
+++ b/.env_template
@@ -1,1 +1,53 @@
+# ========================================
+# ToyCITool 環境変数テンプレート
+# ========================================
+# このファイルをコピーして .env ファイルを作成してください
+# コマンド: copy .env_template .env (Windows) または cp .env_template .env (Linux/Mac)
+
+# ========================================
+# Git認証情報
+# ========================================
+# Gitリポジトリへのアクセストークン
+# GitHub: Personal Access Token (repo権限が必要)
+# GitLab: Personal Access Token (api権限が必要)
+# Gitea: Application Token (write:repository権限が必要)
 GIT_ACCESS_TOKEN=
+
+# GitリポジトリのベースURL（オプション、config.yamlで個別に指定可能）
+# GIT_REPO_URL=http://localhost:3000/test_user/message_test.git
+
+# ========================================
+# 設定ファイルパス（オプション）
+# ========================================
+# デフォルトは config.yaml
+# TOYCI_CONFIG_PATH=config.yaml
+
+# ========================================
+# Windowsサービスとして実行する場合の注意事項
+# ========================================
+# 
+# 【重要】Windowsサービスとして実行する場合、この .env ファイルは使用されません。
+# 
+# 理由:
+# - Windowsサービスは通常、ユーザーセッションとは異なるコンテキストで実行されます
+# - .env ファイルの読み込みが失敗する可能性があります
+# - 環境変数の継承が制限されます
+# 
+# 解決方法:
+# WinSW設定ファイル（ToyCITool.xml）で環境変数を直接設定してください。
+# 
+# 例:
+# <env name="GIT_ACCESS_TOKEN" value="your_actual_token_here"/>
+# <env name="TOYCI_CONFIG_PATH" value="f:\Project\ToyCITool\config.yaml"/>
+# 
+# 詳細は docs/windows_service.md を参照してください。
+# 
+# ========================================
+# セキュリティに関する注意
+# ========================================
+# 
+# 1. このファイルには機密情報（アクセストークン）が含まれます
+# 2. .gitignore に .env が含まれていることを確認してください
+# 3. バージョン管理システムにコミットしないでください
+# 4. ファイルのアクセス権限を適切に設定してください
+# 5. WinSW設定ファイルにトークンを記載する場合も同様に注意してください
